--- a/admin.html
+++ b/admin.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="./css/style.css">
 
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-<script>
-  emailjs.init("LVhiA-G7YXByCK5H1");
-</script>
+  <script>
+    emailjs.init("service_i6mzuec");
+  </script>
 
 
 </head>
